add uid generator
